// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`status loader workinstance 1`] = `
DisplayName {
  "__typename": "DisplayName",
  "_id": "lm_9d780d49-ba27-4ed1-a84f-c16771085b88",
  "_type": "name",
  "id": "bmFtZTpsbV85ZDc4MGQ0OS1iYTI3LTRlZDEtYTg0Zi1jMTY3NzEwODViODg=",
}
`;

exports[`status loader worktemplate 1`] = `
DisplayName {
  "__typename": "DisplayName",
  "_id": "lm_c5a51aaf-ac99-4957-bbc0-1ff79ae03d16",
  "_type": "name",
  "id": "bmFtZTpsbV9jNWE1MWFhZi1hYzk5LTQ5NTctYmJjMC0xZmY3OWFlMDNkMTY=",
}
`;

exports[`status loader workresult 1`] = `
DisplayName {
  "__typename": "DisplayName",
  "_id": "lm_9a87f095-a64b-4615-bba5-656cbda3a675",
  "_type": "name",
  "id": "bmFtZTpsbV85YTg3ZjA5NS1hNjRiLTQ2MTUtYmJhNS02NTZjYmRhM2E2NzU=",
}
`;

exports[`status loader workresultinstance 1`] = `
DisplayName {
  "__typename": "DisplayName",
  "_id": "lm_243dc4ff-8e8e-431b-a3c4-2aa355880fa3",
  "_type": "name",
  "id": "bmFtZTpsbV8yNDNkYzRmZi04ZThlLTQzMWItYTNjNC0yYWEzNTU4ODBmYTM=",
}
`;
